--- a/assets/style/cmps/UserDetails.css
+++ b/assets/style/cmps/UserDetails.css
@@ -3,7 +3,8 @@
    padding: 20px;
    margin-bottom: 20px;
    border-radius: 8px;
-   background-color: #f9f9f9;
+   background-color: var(--clr1bg);
+   margin-top: 10px;
 }
 
 .user-details form {
